--- a/products/product.html
+++ b/products/product.html
@@ -134,10 +134,10 @@
                 <div class="about-product__menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#" data-filter="desc" class="menu__link menu__link--active">описание</a>
+                            <a href="#" data-filter="desc" class="menu__link ">описание</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" data-filter="size-table" class="menu__link">таблица размеров</a>
+                            <a href="#" data-filter="size-table" class="menu__link menu__link--active">таблица размеров</a>
                         </li>
                         <li class="menu__item">
                             <a href="#" data-filter="delivery" class="menu__link">условия доставки</a>
@@ -197,7 +197,25 @@
                             <div class="desc__text">Футболка из приятной ткани с качественным принтом, это одна из самых универсальных вещей в гардеробе. Она подойдет и для занятий спортом, и для прогулок, и для работы, если разрешен свободный дресс-код.</div>
                         </div>
                     </div>
-                    <div class="about-product__item--style-size-table size-table about-product__item">a</div>
+                    <div class="about-product__item--style-size-table size-table about-product__item">
+                        <div class="item__manual">
+                            <div class="manual__pic">
+                                <img src="./../img/web-ready/tshirts/tshirt_00.png" alt="фтуболка показывающая где длина и ширина" class="manual__img">
+                            </div>
+                            <ul class="manual__list">
+                                <li class="manual__item">
+                                    <div class="manual__text">Измерьте ширину, см.<br>(от подмышки до подмышки)</div>
+                                </li>
+                                <li class="manual__item">
+                                    <div class="manual__text">Измерьте длину, см.<br>(от верхней точки плеча до низа)</div>
+                                </li>
+                                <li class="manual__item">
+                                    <div class="manual__text">Сверьте данные с таблицей</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="item__size-table"></div>
+                    </div>
                     <div class="about-product__item--style-delivery delivery about-product__item">b</div>
                     <div class="about-product__item about-manufacturer about-product__item--style-about-manufacturer">c</div>
                 </div>
