--- a/products/product.html
+++ b/products/product.html
@@ -205,7 +205,7 @@
                                 <a
                                     href="#"
                                     data-filter="desc"
-                                    class="menu__link"
+                                    class="menu__link menu__link--active"
                                     >описание</a
                                 >
                             </li>
@@ -213,7 +213,7 @@
                                 <a
                                     href="#"
                                     data-filter="size-table"
-                                    class="menu__link menu__link--active"
+                                    class="menu__link"
                                     >таблица размеров</a
                                 >
                             </li>
@@ -696,12 +696,61 @@
                         <div
                             class="about-product__item--style-delivery delivery about-product__item"
                         >
-                            b
+                            <div class="delivery__logo">
+                                <img
+                                    src="./../img/web-ready/content/logos/express.png"
+                                    alt="logo-express"
+                                    class="delivery__img"
+                                />
+                            </div>
+                            <div class="delivery__desc">
+                                <div class="delivery__text">
+                                    Доставка по России и странам Ближнего
+                                    Зарубежья (Украина, Белорусия, Молдавия,
+                                    Польша,<br />
+                                    Эстония, Болгария, Румыния, Чехия, Словакия,
+                                    Венгрия и т.д.), всего 400 руб.
+                                </div>
+                                <div class="delivery__text">
+                                    Мы так же доставляем в США, Японию,
+                                    Австралию, Англию, Италию, Испанию и т.д. ,
+                                    стоимость<br />
+                                    доставки около 600 руб.
+                                </div>
+                                <div class="delivery__text">
+                                    (Цена приведена для ориентира и может
+                                    отличаться в зависимости от дальности и
+                                    веса<br />
+                                    посылки)
+                                </div>
+                            </div>
                         </div>
                         <div
                             class="about-product__item about-manufacturer about-product__item--style-about-manufacturer"
                         >
-                            c
+                            <div class="about-manufacturer__logo">
+                                <img
+                                    src="./../img/web-ready/content/logos/harly.png"
+                                    alt="logo-harly"
+                                    class="about-manufacturer__img"
+                                />
+                            </div>
+                            <div class="about-manufacturer__desc">
+                                <div class="about-manufacturer__text">
+                                    Марка Hurley основана на любви к океану с
+                                    его постоянством в этом изменчивом мире.<br />
+                                    Она осуществляет мечты молодого поколения,
+                                    сочетая музыку и искусство в дизайне
+                                    одежды,<br />
+                                    обуви и аксессуаров. Наполненная духом
+                                    пляжной культуры продукция Hurley предлагает
+                                    новое<br />
+                                    восприятие комфорта и индивидуальности.
+                                    Hurley выбирает только тот, кто страстно
+                                    влюблён<br />
+                                    в свободу.
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -878,11 +927,10 @@
                     </section>
                 </div>
             </footer>
-
-            <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-            <script src="./../scripts/menu-size.js"></script>
-            <script src="./../scripts/menu-color.js"></script>
-            <script src="./../scripts/about-product__menu.js"></script>
         </div>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+        <script src="./../scripts/menu-size.js"></script>
+        <script src="./../scripts/menu-color.js"></script>
+        <script src="./../scripts/about-product__menu.js"></script>
     </body>
 </html>
