--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="1440" />
+        <link
+            rel="icon"
+            href="./img/web-ready/content/logos/logo-main.png"
+            type="image/x-icon"
+        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -21,7 +26,7 @@
             href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
         />
         <link rel="stylesheet" href="./main.css" />
-        <title>home</title>
+        <title scr="./img/web-ready/content/logos/logo-main.png">home</title>
     </head>
 
     <body>
