--- a/products/product.html
+++ b/products/product.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="1300" />
+        <link
+            rel="icon"
+            href="./img/web-ready/content/logos/logo-main.png"
+            type="image/x-icon"
+        />
         <link rel="stylesheet" href="./../main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
