--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
         />
         <link rel="stylesheet" href="./main.css" />
-        <title scr="./img/web-ready/content/logos/logo-main.png">home</title>
+        <title>home</title>
     </head>
 
     <body>
